--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,8 @@ jobs:
           cache: 'yarn'
       - name: install dependencies
         run: yarn install
+      - name: install playwright
+        run: npx playwright install-deps chromium
       - name: run automation
         run: yarn ci
       - name: add changes
