--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@playwright/test": "^1.22.2",
+    "playwright": "^1.22.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.2"
   },
