--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,10 @@ jobs:
         run: npx playwright install-deps chromium
       - name: run automation
         run: yarn ci
+      - name: git setup user.email
+        run: git config user.email "automated@noreplay.com"
+      - name: git setup user.name
+        run: git config user.name "Automated Commit"
       - name: add changes
         run: git add .
       - name: commit changes
